--- a/formtags/all.html
+++ b/formtags/all.html
@@ -1,4 +1,4 @@
-<input type="text">   :Text <br><br>
+<input type="text" value="text">   :Text <br><br>
 <input type="password"> :Password <br><br>
 <input type="email"> :email <br><br>
 <input type="number"> :number<br><br>
