--- a/formtags/reg_form.html
+++ b/formtags/reg_form.html
@@ -8,25 +8,25 @@
 <body>
     <form>
     <label>User/Email</label>
-    <input type="texr" type="email"><br>
+    <input type="texr" type="email"><br><br>
     <label>Mobile</label>
-    <input type="tel"><br>
+    <input type="tel"><br><br>
     <label> DOB</label>
-    <input type="date"> <br>
+    <input type="date"> <br><br>
     <label > Gender </label>
     <input type="radio" name="Gender"> 
     <label> male</label>
     <input type="radio" name="Gender">
-    <label>Female</label><br>
+    <label>Female</label><br><br>
     <label>State</label>
     <select>
         <option>UP</option>
         <option>delhi</option>
         <option>maharastra</option>
         <option>gujarat</option>
-    </select><br>
+    </select><br><br>
     <label>Message</label>
-    <textarea rows="4" cols="8">Please type your message</textarea><br>
+    <textarea rows="4" cols="8"></textarea><br><br>
     <input type="checkbox"> Please accept <a href="Terms and condition">Terms and condition</a><br><br>
     <input type="Submit" value="Registration">
     <input type="submit" value="Cancel">
