--- a/StaticWeb/login.html
+++ b/StaticWeb/login.html
@@ -14,10 +14,10 @@
     <h4> Log in</h4>
     <hr>
     <form>
-        <label> Email:</label>
-        <input type="email" />
+        <label> Email Id:</label>
+        <input type="email"/>
         <br> <br>
-        <label>Password:</label>
+        <label>Password</label>
         <input type="password"/>
         <br><br>
         <button>Login Page</button>
