--- a/Bootstrap/about.html
+++ b/Bootstrap/about.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <style>
+        .box { 
+            border: 2px solid blue;
+        }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Document</title>
+   
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
@@ -16,12 +22,29 @@
             <li><a class="nav-link" href="product.html">products</a></li>
             <li><a class="nav-link" href="contact.html">Contact</a></li>
             <li><a class="nav-link" href="login.html">Log in</a></li>
-        </ul>
     </nav>
     <hr>
-    <div>
-        <h2>About Page</h2>
+   <div class="container">
+    <div class="row">
+        <div class="col-6 box">E1</div>
+        <div class="col-6 box">E2</div>
     </div>
+    <hr>
+    <div class="row">
+        <div class="col-8">
+            <h5>Mern Stact Development</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat tenetur, rem error velit natus, 
+               qui perferendis libero facilis explicabo et quas! Iure blanditiis quos natus facilis omnis ut 
+               harum necessitatibus.</p>
+        </div>
+        <div class="col-4">
+            <h5>Revanth Reddy</h5>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci nisi autem aspernatur,
+               expedita totam nemo nam animi quod excepturi voluptatem iste ea eum hic aperiam neque 
+               delectus? Accusantium, repellat animi?</p>
+        </div>
+    </div>
+    
 </body>
 </html>
 
