--- a/Bootstrap/about.html
+++ b/Bootstrap/about.html
@@ -26,10 +26,6 @@
     <hr>
    <div class="container">
     <div class="row">
-        <div class="col-6 box">E1</div>
-        <div class="col-6 box">E2</div>
-    </div>
-    <hr>
     <div class="row">
         <div class="col-8">
             <h5>Mern Stact Development</h5>
@@ -38,10 +34,35 @@
                harum necessitatibus.</p>
         </div>
         <div class="col-4">
-            <h5>Revanth Reddy</h5>
+            <h5>Cloud Development</h5>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci nisi autem aspernatur,
                expedita totam nemo nam animi quod excepturi voluptatem iste ea eum hic aperiam neque 
                delectus? Accusantium, repellat animi?</p>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-8">
+                <h2>AI Development</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, earum corrupti, beatae sit architecto omnis necessitatibus aliquid delectus, ratione officia modi! Tempora perspiciatis non aperiam nam enim, quas accusantium nobis?</p>
+            </div>
+                <div class="col-4">
+                    <h2>Hybrid Development</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, quod possimus repellat fugiat molestiae, nulla maiores natus itaque quidem laboriosam, eum quisquam. Fuga consequuntur delectus a magnam nostrum non quod!</p>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <h4>Software Development</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, accusamus corrupti. Obcaecati pariatur non, quisquam exercitationem asperiores eum reprehenderit? Aperiam quasi nulla natus, eveniet nemo quaerat placeat fugiat magni quod!</p>
+                </div>
+                <div class="col-4">
+                    <h4>App Dev</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis in eius quis quas facilis. Dolores, repellendus velit odit exercitationem molestias nam voluptas minus earum ipsam laborum, fuga eligendi tempora id.</p>
+                </div>
+                <div class="col-4">
+                    <h4>App Development</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dignissimos quam ex inventore cumque adipisci reprehenderit corporis ad, soluta repudiandae excepturi officia architecto quis tempora quibusdam similique quod a velit.</p>
+                </div>
+            </div>
         </div>
     </div>
     
