--- a/Bootstrap/employees.html
+++ b/Bootstrap/employees.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        .text-gold {
+            color:gold;
+        }
+    </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -21,6 +26,41 @@
     <hr>
     <div>
         <h2>Employees page</h2>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+    <table class="table table-striped table-hover">
+        <thead class="bg-dark text-gold">
+            <th>EID</th>
+            <th>E Name</th>
+            <th>E Salary</th>
+            <tbody>
+                <tr>
+                    <td>101</td>
+                    <td>Rahul</td>
+                    <td>45000</td>
+                </tr>
+                <tr>
+                    <td>102</td>
+                    <td>soniya</td>
+                    <td>55000</td>
+                </tr>
+                <tr>
+                    <td>103</td>
+                    <td>Priyanka</td>
+                    <td>65000</td>
+                </tr>
+                <tr>
+                    <td>104</td>
+                    <td>modi</td>
+                    <td>75000</td>
+                </tr>
+            </tbody>
+        </thead>
+    </table>
+    </div>
+    </div>
     </div>
 </body>
 </html>
