--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -18,6 +18,10 @@
             <li><a class="nav-link" href="login.html">Log in</a></li>
         </ul>
     </nav>
+    <hr>
+    <div>
+        <h2>Home Page</h2>
+    </div>
 </body>
 </html>
 
