--- a/Bootstrap/login.html
+++ b/Bootstrap/login.html
@@ -22,6 +22,25 @@
     <div>
         <h2>Login page</h2>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+    <form action="./login.html">
+    <div class="form-group">
+    <div class="form-group">
+        <label>Email Id :</label>
+        <input type="email" placeholder="email" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Password :</label>
+        <input type="password" placeholder="password" class="form-control">
+    </div>
+        <input type="submit" value="Log in" class="sumbit btn-primary"> 
+        </div>
+    </form>
+    </div>
+    </div>
+    </div>
 </body>
 </html>
 
