--- a/Bootstrap/login.html
+++ b/Bootstrap/login.html
@@ -39,6 +39,37 @@
         </div>
     </form>
     </div>
+    <div class="col-3">
+        <h2>Log in Details</h2>
+        <form action="./login.html">
+            <div class="form-group">
+                <label>Email Id :</label>
+                <input type="email" placeholder="email" class="form-control">
+            </div>
+        <div class="form-group">
+            <label>Password :</label>
+            <input type="password" placeholder="password" class="form-control">
+        </div>
+            <input type="submit" value="Log in" class="sumbit btn-primary"> 
+        </div>
+        </form>
+        </div>
+        <div class="col-3">
+        <h2>Log in Details</h2>
+        <form action="./login.html">
+            <div class="form-group bg-dark">
+                <label>Email Id :</label>
+                <input type="email" placeholder="email" class="form-control">
+            </div>
+        <div class="form-group">
+            <label>Password :</label>
+            <input type="password" placeholder="password" class="form-control">
+        </div>
+            <input type="submit" value="Log in" class="sumbit btn-primary"> 
+        </div>
+        </form>
+        </div>
+    </div>
     </div>
     </div>
 </body>
