--- a/Bootstrap/product.html
+++ b/Bootstrap/product.html
@@ -19,8 +19,65 @@
         </ul>
     </nav>
     <hr>
-    <div>
-        <h2>Products page</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="https://rukminim2.flixcart.com/image/312/312/xif0q/mobile/m/3/k/-original-imahbqxnuhznhsj4.jpeg?q=70">
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">SAMSUNG Galaxy S24 FE 5G (Blue, 256 GB)</li>
+                            <li class="list-group-item">INR 45000</li>
+                            <li class="list-group-item">70% OFF</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="https://rukminim2.flixcart.com/image/312/312/xif0q/mobile/v/q/v/-original-imahbqxnzsptbypz.jpeg?q=70">
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">Samsung Galaxy 24</li>
+                            <li class="list-group-item">INR 45000</li>
+                            <li class="list-group-item">70% OFF</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="https://rukminim2.flixcart.com/image/312/312/xif0q/mobile/u/c/g/-original-imahbqxnzgzee4mp.jpeg?q=70">
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">Samsung Galaxy 24</li>
+                            <li class="list-group-item">INR 45000</li>
+                            <li class="list-group-item">70% OFF</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="https://rukminim2.flixcart.com/image/312/312/xif0q/mobile/v/q/v/-original-imahbqxnzsptbypz.jpeg?q=70">
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">Samsung Galaxy 24</li>
+                            <li class="list-group-item">INR 45000</li>
+                            <li class="list-group-item">70% OFF</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
